[gd_scene load_steps=8 format=3 uid="uid://dc50hqke2q756"]

[ext_resource type="Texture2D" uid="uid://0gr8rchs7d2s" path="res://scenes/maps/tiles/map/chest/base.png" id="1_s6qd7"]
[ext_resource type="Resource" uid="uid://m4jkoof7bmtu" path="res://scenes/gui/inventory/items/memory_card.tres" id="2_hbpqs"]
[ext_resource type="Script" path="res://scenes/interactable/Chest.gd" id="2_ncbxj"]
[ext_resource type="Script" path="res://scenes/interactable/Interactable.gd" id="3_1dqqi"]
[ext_resource type="Texture2D" uid="uid://biw1anji1f1f3" path="res://scenes/maps/tiles/map/chest/chest0.png" id="3_7juvb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rqiwf"]
size = Vector2(20, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_xdfad"]
radius = 24.0208

[node name="Chest" type="StaticBody2D" groups=["external_inventory"]]
z_as_relative = false
position = Vector2(0, -9)
collision_layer = 128
collision_mask = 342
script = ExtResource("2_ncbxj")
key_item = ExtResource("2_hbpqs")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_rqiwf")

[node name="ChestOpen" type="Sprite2D" parent="."]
visible = false
z_index = 1
y_sort_enabled = true
position = Vector2(0, -4)
texture = ExtResource("3_7juvb")

[node name="ChestClosed" type="Sprite2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(0, -3)
texture = ExtResource("1_s6qd7")

[node name="InteractableArea" type="Area2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(-595, -1036)
collision_layer = 256
collision_mask = 16
script = ExtResource("3_1dqqi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea"]
position = Vector2(595, 1036)
shape = SubResource("CircleShape2D_xdfad")

[node name="InterfaceAnchor" type="Marker2D" parent="."]
position = Vector2(13, -10)

[connection signal="body_entered" from="InteractableArea" to="InteractableArea" method="_on_body_entered"]
[connection signal="body_exited" from="InteractableArea" to="." method="_on_interactable_area_body_exited"]
[connection signal="interacted" from="InteractableArea" to="." method="_on_interactable_area_interacted"]
